--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
                     <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-checkstyle-plugin</artifactId>
+    <version>3.2.0</version>
+    <configuration>
+        <configLocation>checkstyle.xml</configLocation>
+    </configuration>
+</plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
