--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
+    - run: mvn test
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
