--- a/pom.xml
+++ b/pom.xml
@@ -27,18 +27,14 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>
-                        <arg>-Xlint:all</arg>
-                    </compilerArgs>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
+                    <configLocation>google_checks.xml</configLocation> <!-- Используем стандартные правила Google -->
+                    <violationSeverity>error</violationSeverity>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
