--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
         <junit.version>5.9.2</junit.version>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>my-repo</id>
+            <url>https://github.com/LacusFaustus/develop</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
