--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,9 +2,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "sprint_7-feature" ]
+    branches: [ "sprint_8-solution-time-and-duration" ]
   pull_request:
-    branches: [ "sprint_7-feature" ]
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -20,5 +20,11 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Build and test with Maven
-        run: mvn -B clean test
+      - name: Build with Maven
+        run: mvn -B clean compile
+
+      - name: Run tests
+        run: mvn -B test
+
+      - name: Checkstyle
+        run: mvn checkstyle:check
